IntelHLS/logs/example1_test2.txt
example/example1_test2.c:14:9: warning: address of stack memory associated with local variable 'b' returned [-Wreturn-stack-address]
        return b;
               ^
example/example1_test2.c:22:6: error: assigning to 'int *' from incompatible type 'const int *'
        b = test(a);    
            ^~~~~~~
1 warning and 1 error generated.
HLS FPGA Parse FAILED.
